--- a/dps.html
+++ b/dps.html
@@ -1084,8 +1084,8 @@ not a risk.</p>
 <p>Metadata and the Dataset are data that need to be of quality and
 trustable to be valuable.... blah blah</p>
 <h1 id="7-annex">7. Annex</h1>
-<p>The Annex contain normative vocabulary to be used when it applies.
-These vocabulary SHALL be used when they apply.</p>
+<p>The Annex contains normative vocabulary to be used when it applies.
+This vocabulary SHALL be used when they apply.</p>
 <h2 id="71-data-collection-method-codes">7.1 Data Collection Method
 Codes</h2>
 <p>The following defined vocabulary are to be used for the "Method".</p>
@@ -1439,7 +1439,7 @@ tools (PET).</p>
 </table>
 <h2 id="73-data-use-codes">7.3 Data Use Codes</h2>
 <p>The following concepts are defined to describe intended and forbidden
-uses of the dataset</p>
+uses of the dataset.</p>
 <ul>
 <li>source URI:
 <code>https://dataandtrustalliance.org/DPS/CodeSystem/Use</code></li>
@@ -1493,7 +1493,7 @@ uses of the dataset</p>
 <p>Where: <code>non-ai-other</code>, and <code>ai-other</code></p>
 <h2 id="74-data-regulation-codes">7.4 Data Regulation Codes</h2>
 <p>The following concepts are defined to indicate specific global
-regulated domains of relevance</p>
+regulated domains of relevance.</p>
 <ul>
 <li>source URI:
 <code>https://dataandtrustalliance.org/DSP/CodeSystem/Regulations</code></li>
