--- a/dps.html
+++ b/dps.html
@@ -1056,15 +1056,94 @@ metadata encoding</a></p>
 href="https://github.com/Data-and-Trust-Alliance/yaml-metadata">YAML
 metadata encoding</a></p>
 <h1 id="6-security-considerations">6. Security considerations</h1>
-<p>TODO: This section should advise the reader on security or privacy
-things they should be aware of and for which a user of this
-specification will need to consider. Often it is just a listing of risks
-that the specification does not address, but for which the specification
-creates. Such as the fact that datasets and metadata are sensitive data
-and would need to be protected or carefully crafted such that they are
-not a risk.</p>
-<p>Metadata and the Dataset are data that need to be of quality and
-trustable to be valuable.... blah blah</p>
+<p>Creating and publicly sharing metadata is crucial for transparency
+and trust building in data assets used for AI. However, it can also
+expose organizations to security risks, including:</p>
+<ol type="1">
+<li>Unauthorized access and data breaches
+<ul>
+<li>Disclosing the metadata location (Unique URL of the current dataset)
+and making publicly accessible URLs visible may cause an organization to
+be targeted by unauthorized users attempting to access the dataset's
+contents.</li>
+<li>By specifying the confidentiality classification, attackers could
+exploit the declaration to identify and target high-value datasets.</li>
+</ul></li>
+<li>Data integrity and manipulation
+<ul>
+<li>Unique metadata identifiers are predictable, and attackers could
+manipulate or create false metadata entries to corrupt data
+integrity.</li>
+<li>Provenance information details a dataset's source metadata and data
+lineage. This information may provide attackers with information on data
+flows and dependencies, potentially allowing them to introduce malicious
+data into the pipeline.</li>
+</ul></li>
+<li>Privacy and confidentiality risks
+<ul>
+<li>Organizations may expose sensitive contractual information and legal
+agreements by publicly listing where the consent for private data
+collection is stored.</li>
+<li>Indicating the use of Privacy Enhancing Technologies (PETs) might
+reveal which datasets contain sensitive personal information (PII/SPI),
+making them targets for privacy attacks.</li>
+</ul></li>
+<li>Compliance and legal risks
+<ul>
+<li>Disclosure of geographical data origins and storage locations
+through the “Data Origin Geography” and “Data Storage Geography”
+metadata can expose organizations to legal and compliance risks,
+especially if data sovereignty laws are violated.</li>
+<li>Publicly sharing licensing information via the “License to Use”
+metadata can lead to misuse or unauthorized exploitation of datasets if
+not adequately protected.</li>
+</ul></li>
+<li>Operational and organizational risks
+<ul>
+<li>Publicly identifying the legal entity responsible for the dataset
+via the dataset “Issuer” and “Source” metadata could expose the
+organization to targeted phishing attacks or social engineering
+attempts.</li>
+<li>Revealing the intended use of data can provide insights into
+organizational strategies and operational plans, which could be
+exploited by competitors or malicious actors.</li>
+</ul></li>
+<li>Exploitation of methodologies
+<ul>
+<li>Detailed descriptions of data collection methodologies via the
+“Method” metadata component can be exploited by adversaries to identify
+weaknesses in data generation processes or to mimic legitimate data
+collection efforts for fraudulent purposes.</li>
+</ul></li>
+<li>Proprietary information exposure
+<ul>
+<li>Indicating the presence of proprietary data can make datasets
+targets for industrial espionage or intellectual property theft.</li>
+</ul></li>
+<li>Potential misuse of metadata
+<ul>
+<li>Detailed descriptions and titles of datasets may inadvertently
+disclose sensitive project details or internal operational
+information.</li>
+<li>Revealing specific data collection time frames through the “Range of
+Dates for Data Generation” can provide adversaries with insights into
+organizational activities and patterns.</li>
+</ul></li>
+</ol>
+<p>To mitigate these risks, organizations should:</p>
+<ul>
+<li>Implement robust access controls and authentication mechanisms for
+metadata and datasets</li>
+<li>Use Privacy Enhancing Technologies (e.g., encryption) to protect
+datasets</li>
+<li>Redact sensitive metadata elements</li>
+<li>Regularly audit and monitor access to metadata and datasets to
+detect and respond to unauthorized activities</li>
+<li>Limit the public disclosure of sensitive information and use
+anonymization techniques where possible</li>
+<li>Ensure compliance with relevant data protection laws and regulations
+by adhering to best data governance and privacy practices.</li>
+</ul>
 <h1 id="7-annex">7. Annex</h1>
 <p>The Annex contains normative vocabulary to be used when it applies.
 This vocabulary SHALL be used when they apply.</p>
