--- a/dps.html
+++ b/dps.html
@@ -32,7 +32,7 @@
 <h1 class="title">The Data Provenance Standards</h1>
 </header>
 <p><strong>The Data Provenance Standards</strong></p>
-<p>The Data Provenance Standards define metadata about a dataset, so
+<p>The D&TA Data Provenance Standards define metadata about a dataset, so
 that the dataset provenance and lineage are understood. This set of
 metadata are necessary to enable proper dataset selection for AI Model
 Training.</p>
