Comments using form, not email

--- a/dps.html
+++ b/dps.html
@@ -50,7 +50,8 @@ Alliance</a></li>
 <li>John Moehrke</li>
 </ul>
 <p><strong>Comments</strong> <a
-href="mailto:inquiries@dataandtrustalliance.org">inquiries@dataandtrustalliance.org</a></p>
+href="https://us14.list-manage.com/survey?u=f2c4b0ec47814ddee58d70038&amp;id=0a9e540029">Change
+Request Form</a></p>
 <p><strong>License</strong> <a
 href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
 Attribution-ShareAlike 4.0 International</a></p>
