Remove Acknowledgments section

--- a/dps.html
+++ b/dps.html
@@ -38,7 +38,7 @@ Standards</strong></p>
 dataset, so that the dataset provenance and lineage are understood. This
 set of metadata are necessary to enable proper dataset selection for AI
 Model Training.</p>
-<p><strong>Version 1.1.0</strong></p>
+<p><strong>Version 1.0.0</strong></p>
 <p><strong><a
 href="https://dataandtrustalliance.org/DPS">Published</a></strong>
 Draft</p>
@@ -47,8 +47,12 @@ Draft</p>
 <li><a href="https://dataandtrustalliance.org/">Data &amp; Trust
 Alliance</a></li>
 <li>Kristina Podnar</li>
+<li>Ellyn Heald</li>
 <li>John Moehrke</li>
 </ul>
+<p><strong><a
+href="https://dataandtrustalliance.org/who-we-are">Acknowledgements to
+the D&amp;TA Members</a></strong></p>
 <p><strong>Comments</strong> <a
 href="https://us14.list-manage.com/survey?u=f2c4b0ec47814ddee58d70038&amp;id=0a9e540029">Change
 Request Form</a></p>
@@ -77,7 +81,6 @@ Standards propose a solution.</p>
 <li><a href="#6-security-considerations">Security
 Considerations</a></li>
 <li><a href="#7-annex">Annex</a></li>
-<li><a href="#8-acknowledgements">Acknowledgements</a></li>
 </ol>
 <h1 id="2-introduction">2. Introduction</h1>
 <p>For the past quarter century, companies have worked to become
@@ -1603,111 +1606,5 @@ regulated domains of relevance.</p>
 </tr>
 </tbody>
 </table>
-<h1 id="8-acknowledgements">8. Acknowledgements</h1>
-<p>Acknowledgements to the <a
-href="https://dataandtrustalliance.org/who-we-are">Members of the Data
-&amp; Trust Alliance</a></p>
-<p><strong>AARP</strong></p>
-<ul>
-<li>Jaye Campbell
-<ul>
-<li>Legal Leader, General Counsel</li>
-</ul></li>
-</ul>
-<p><strong>American Express</strong></p>
-<ul>
-<li>Laurel Shifrin
-<ul>
-<li>VP, Enterprise Data Governance</li>
-</ul></li>
-</ul>
-<p><strong>Deloitte</strong></p>
-<ul>
-<li>Ajay Tripathi
-<ul>
-<li>Office of CDO</li>
-</ul></li>
-</ul>
-<p><strong>Howso</strong></p>
-<ul>
-<li>Chris Hazard
-<ul>
-<li>Chief Technology Officer</li>
-</ul></li>
-<li>Michael Meehan
-<ul>
-<li>General Counsel</li>
-</ul></li>
-</ul>
-<p><strong>Humana</strong></p>
-<ul>
-<li>Genevy Dimitrion
-<ul>
-<li>VP, Data Strategy &amp; Governance</li>
-</ul></li>
-</ul>
-<p><strong>IBM</strong></p>
-<ul>
-<li>Lee Cox
-<ul>
-<li>VP, Integrated Governance &amp; Market Readiness, Office of Privacy
-and Responsible Tech.</li>
-</ul></li>
-<li>Bryan Bortnick
-<ul>
-<li>Counsel, Data Governance</li>
-</ul></li>
-<li>Bryan Kyle
-<ul>
-<li>Sr. Technical Staff Member, Data Eng., Chief Data Office</li>
-</ul></li>
-<li>Orla Flannery
-<ul>
-<li>Privacy Program Manager</li>
-</ul></li>
-</ul>
-<p><strong>Mastercard</strong></p>
-<ul>
-<li>Travis Carpenter
-<ul>
-<li>VP, Data Quality &amp; Sources</li>
-</ul></li>
-</ul>
-<p><strong>Nielsen</strong></p>
-<ul>
-<li>Christine Pierce
-<ul>
-<li>Chief Data Officer</li>
-</ul></li>
-</ul>
-<p><strong>Pfizer</strong></p>
-<ul>
-<li>Genta Spahiu
-<ul>
-<li>Director, Data Gov. Lead</li>
-</ul></li>
-</ul>
-<p><strong>Transcarent</strong></p>
-<ul>
-<li>Thi Montalvo
-<ul>
-<li>VP Reporting and Analytics</li>
-</ul></li>
-<li>Thomas Birchfield
-<ul>
-<li>Technical Program Manager</li>
-</ul></li>
-</ul>
-<p><strong>UPS</strong></p>
-<ul>
-<li>Mallory Freeman
-<ul>
-<li>VP, Enterprise Data and Analytics</li>
-</ul></li>
-<li>Zeenat Syed
-<ul>
-<li>Director of Data Strategy</li>
-</ul></li>
-</ul>
 </body>
 </html>
